change: retorna um array vazio com status `OK` mesmo se não houver vagas